# CS170-Project2

./: README.md  feature_selection  features
DataFiles/: largeNormalized.csv  largeUnNormalized.csv  smallNormalized.csv  smallUnNormalized.csv  titanic.csv  titanic_clean.txt
header/: Evaluation.h  NNClassifier.h  ReadFileClass.h  Validator.h
src/: Evaluation.cpp  NNClassifier.cpp  ReadFileClass.cpp  Validator.cpp  a.out  main.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  features  runAllTests  test.cpp
